--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+    {% seo %}
     <title>
       {{ page.title }}
     </title>
