--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -455,7 +455,7 @@ footer {
 #content p, li {
   padding: 8px 0;
   line-height: 2rem;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 #menu li {
@@ -542,7 +542,8 @@ h3 .code-plain {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   padding: 15px;
-  font-size: 0.9rem;
+  font-size: 1rem;
+  line-height: 2rem;
 }
 
 #about-main h2 {
@@ -566,4 +567,14 @@ h3 .code-plain {
   font-size: 1rem;
   color: #fff;
   padding: 4px 18px;
+}
+
+#about-main h3 {
+  margin-top: 30px;
+  margin-left: 15px;
+  font-weight: 600;
+}
+
+#about-main span {
+  font-weight: 400;
 }
