--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/prism.css">
     {% seo %}
-    <title>
-      {{ page.title }}
-    </title>
   </head>
   <body>
     <div id="container">
