--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -15,7 +16,6 @@ html {
 
 body {
   background-color: #fff;
-  font-size: 16px;
   line-height: 1.8rem;
   min-height: 100vh;
 }
@@ -23,6 +23,7 @@ body {
 div#container {
   display: grid;
   grid-template-columns: 1fr 1000px 1fr;
+  font-size: 1rem;
 }
 
 strong {
@@ -131,10 +132,7 @@ a.nav-bar-link {
 }
 
 a.nav-bar-link:hover {
-  text-decoration: none;
-  font-size: 1.1rem;
   color: #3699;
-  margin: 0 10px;
 }
 
 a.nav-bar-link.current {
@@ -346,9 +344,13 @@ main#docs {
   border-top: 2px solid #369;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  display: grid;
-  grid-template-columns: 200px minmax(auto, 740px);
+  display: flex;
+  flex-direction: row;
   padding: 15px;
+}
+
+section#docs-nav {
+  width: 20vw;
 }
 
 section#docs-nav h4 {
@@ -358,6 +360,20 @@ section#docs-nav h4 {
 
 section#docs-nav li {
   list-style: none;
+}
+
+section#docs-nav-mobile {
+  display: none;
+}
+
+section#docs-nav-mobile > select {
+  width: 100%;
+  height: 2.5rem;
+  font-size: 1rem;
+  padding: 5px 15px;
+  background-color: #eee;
+  border: none;
+  border-radius: 4px;
 }
 
 a.docs-nav-link {
@@ -371,7 +387,7 @@ a.docs-nav-link.current {
 section#docs-content {
   margin-top: 20px;
   background-color: #eee;
-  width: 100%;
+  width: 75vw;
   border-radius: 10px;
   padding: 15px;
 }
@@ -464,15 +480,14 @@ div#about-container {
   padding: 15px;
 }
 
-div#benchmarks-container > h2 {
-  font-size: 2rem;
+div#benchmarks-container > h2,
+div#about-container > h2 {
+  font-size: 1.6rem;
   font-weight: 400;
   margin: 40px 0 20px 0;
 }
 
 div#about-container > h2 {
-  font-size: 2rem;
-  font-weight: 400;
   margin: 10px 0 20px 0;
 }
 
@@ -490,4 +505,295 @@ div#about-container p  {
 
 div#benchmarks-container span {
   font-weight: 400;
+}
+
+@media only screen and (max-width: 1000px) {
+  div#container {
+    grid-template-columns: 0 100vw 0;
+  }
+
+  main#docs {
+    grid-template-columns: 20% 75%;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  section#docs-nav {
+    width: 25vw;
+  }
+
+  section#docs-content {
+    width: 70vw;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+
+  div#logo > h2 {
+    font-size: 1.25rem;
+  }
+
+  a.nav-bar-link {
+    font-size: 1rem;
+  }
+
+  section#features {
+    padding-left: 10px;
+    padding-right: 30px;
+    margin: 0;
+  }
+
+  div#latest-release-link-container > a {
+    font-weight: 600;
+    font-size: 0.75rem;;
+  }
+
+  footer p {
+    line-height: 1.5rem;
+  }
+
+  section#docs-nav h4 {
+    font-size: 0.9rem;
+  }
+
+  a.docs-nav-link {
+    font-size: 0.8rem;
+  }
+
+  div#benchmarks-container > h2,
+  div#about-container > h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  body {
+    line-height: 1.5rem;
+  }
+
+  header {
+    flex-direction: column;
+  }
+
+  div#logo {
+    justify-content: center;
+  }
+
+  div#logo > h2 {
+    font-size: 2.5rem;
+    margin: 15px 0;
+  }
+
+  div#latest-release-link-container {
+    position: fixed;
+    left: 10000px;
+  }
+
+  nav#nav-bar {
+    margin-bottom: 10px;
+  }
+
+  nav#nav-bar > ul {
+    width: 96vw;
+    justify-content: space-between;
+  }
+
+  a.nav-bar-link {
+    font-size: 1.2rem;
+  }
+
+  footer {
+    font-size: 1rem;
+  }
+
+  section#intro > h1 {
+    display: none;
+  }
+
+  section#intro > p {
+    margin-top: 75px;
+  }
+
+  section#features {
+    padding-top: 15px;
+    padding-left: 30px;
+  }
+
+  div.feature-graphic-container {
+    display: none;
+  }
+
+  div.feature-text-container {
+    grid-column: 1 / 6;
+    margin: 15px 0;
+  }
+
+  main#docs {
+    flex-direction: column;
+  }
+
+  section#docs-nav {
+    display: none;
+  }
+
+  section#docs-nav-mobile {
+    display: block;
+  }
+
+  section#docs-content {
+    width: unset;
+  }
+
+  section#docs-content p,
+  section#docs-content li {
+      font-size: 1rem;
+  }
+
+  div#benchmarks-container > h2,
+  div#about-container > h2 {
+    font-size: 2rem;
+  }
+
+  div#benchmarks-container,
+  div#about-container {
+    font-size: 1.1rem;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  div#container {
+    font-size: 0.75rem;
+  }
+
+  a.nav-bar-link {
+    font-size: 0.85rem;
+  }
+
+  footer {
+    font-size: 0.75rem;
+    flex-direction: column;
+  }
+
+  div.footer-section {
+    width: 100%;
+    text-align: center;
+  }
+
+  div.footer-section.right {
+    margin-top: 25px;
+    text-align: center;
+  }
+
+  section#intro > h1 {
+    display: none;
+  }
+
+  section#intro > p {
+    font-size: 1rem;
+    margin-top: 50px;
+  }
+
+  section#intro > div {
+    margin-bottom: 50px;
+  }
+
+  section#intro > div > code {
+    font-size: 0.7rem;
+    padding: 0 8px;
+  }
+
+  section#features {
+    padding-top: 15px;
+    padding-left: 30px;
+  }
+
+  div.feature-graphic-container {
+    display: none;
+  }
+
+  div.feature-text-container {
+    grid-column: 1 / 6;
+    margin: 15px 0;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  section#get-started-btn {
+    padding-bottom: 10px;
+}
+
+  section#get-started-btn > a {
+    font-size: 1.2rem;
+    padding: 10px 20px;
+  }
+
+  code.code-inline {
+    white-space: unset;
+  }
+
+  code[class*="language-"],
+  pre[class*="language-"] {
+    font-size: 0.7rem !important;
+  }
+
+  section#docs-content h1 {
+    font-size: 1.2rem;
+  }
+
+  section#docs-content p,
+  section#docs-content li {
+    font-size: 0.75rem;
+  }
+
+  h3 code {
+    font-size: 0.85rem;
+  }
+
+  div#benchmarks-container > h2,
+  div#about-container > h2 {
+    font-size: 1.2rem;
+  }
+
+  div#benchmarks-container,
+  div#about-container {
+    font-size: 0.75rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  nav#nav-bar li {
+    line-height: 1.3rem;
+  }
+
+  a.nav-bar-link {
+    font-size: 0.7rem;
+    margin: 4px;
+    line-height: unset;
+  }
+
+  img#github-new-window-image {
+    width: 12px;
+    position: relative;
+    top: 4px;
+  }
+
+  footer {
+    font-size: 0.6rem;
+    flex-direction: column;
+  }
+
+  div#benchmarks-container > h2,
+  div#about-container > h2 {
+    font-size: 1rem;
+  }
+
+  div#benchmarks-container,
+  div#about-container {
+    font-size: 0.75rem;
+  }
 }
