Modify GitHub link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
         </a>
       </li>
       {% endfor %}
-      <li><a class="nav-bar-link" href="https://github.com/tuftjs/tuft" target="_blank">GitHub&nbsp;<img
-            id="github-new-window-image" src="/assets/images/open_in_new-black-18dp.svg" alt="new window"></a></li>
+      <li><a class="nav-bar-link" href="https://github.com/tuftjs/tuft" target="_blank">GitHub&nbsp;</a><img
+          id="github-new-window-image" src="/assets/images/open_in_new-black-18dp.svg" alt="new window"></li>
     </ul>
   </nav>
 </header>
