--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,6 +113,10 @@ nav#nav-bar > ul {
   justify-content: right;
 }
 
+nav#nav-bar li {
+  padding: 0 10px;
+}
+
 nav#nav-bar li.current {
   background-color: #369;
   border-radius: 4px;
@@ -128,7 +132,6 @@ a.nav-bar-link {
   text-decoration: none;
   font-size: 1.1rem;
   color: #369;
-  margin: 0 10px;
 }
 
 a.nav-bar-link:hover {
