--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Tuft, TuftJS, HTTP/2, http2, web, framework, node, nodejs, node.js">
+    <meta name="keywords" content="Tuft, TuftJS, http, web, framework, node, nodejs, node.js">
     {% seo %}
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
