Improve resizing on mobile devices

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
         href="https://github.com/tuftjs/tuft/blob/master/LICENSE" target="_blank">MIT License</a>.</p>
   </div>
   <div class="footer-section right">
+    <p id="github-footer">View the project respository on <a href="https://github.com/tuftjs/tuft" target="_blank">GitHub</a>.<br><br></p>
     <p>Hosted by <a href="https://pages.github.com" target="_blank">GitHub Pages</a>.</p>
   </div>
 </footer>
