--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         </a>
       </li>
       {% endfor %}
-      <li><a class="nav-bar-link" href="https://github.com/tuftjs/tuft" target="_blank">GitHub&nbsp;</a><img
+      <li id="github-link"><a class="nav-bar-link" href="https://github.com/tuftjs/tuft" target="_blank">GitHub&nbsp;</a><img
           id="github-new-window-image" src="/assets/images/open_in_new-black-18dp.svg" alt="new window"></li>
     </ul>
   </nav>
