--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -174,6 +174,10 @@ div.footer-margin.right {
   grid-column: 3 / 4;
 }
 
+p#github-footer {
+  display: none;
+}
+
 main#index {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
@@ -601,6 +605,14 @@ div#benchmarks-container span {
   div#about-container > h2 {
     font-size: 1.5rem;
   }
+
+  li#github-link {
+    display: none;
+  }
+
+  p#github-footer {
+    display: unset;
+  }
 }
 
 @media only screen and (max-width: 700px) {
@@ -641,8 +653,20 @@ div#benchmarks-container span {
   }
 
   footer {
-    font-size: 1rem;
+    font-size: 0.75rem;
+    flex-direction: column;
   }
+
+  div.footer-section {
+    width: 100%;
+    text-align: center;
+  }
+
+  div.footer-section.right {
+    margin-top: 25px;
+    text-align: center;
+  }
+
 
   section#intro > h1 {
     display: none;
@@ -707,21 +731,6 @@ div#benchmarks-container span {
 
   a.nav-bar-link {
     font-size: 0.85rem;
-  }
-
-  footer {
-    font-size: 0.75rem;
-    flex-direction: column;
-  }
-
-  div.footer-section {
-    width: 100%;
-    text-align: center;
-  }
-
-  div.footer-section.right {
-    margin-top: 25px;
-    text-align: center;
   }
 
   section#intro > h1 {
@@ -791,13 +800,19 @@ div#benchmarks-container span {
     font-size: 0.85rem;
   }
 
+  div#extensions-container,
+  div#benchmarks-container,
+  div#about-container {
+    padding: 15px;
+  }
+
   div#extensions-container > h2,
   div#benchmarks-container > h2,
   div#about-container > h2 {
     font-size: 1.2rem;
   }
 
-  div#extensions-containerm
+  div#extensions-container,
   div#benchmarks-container,
   div#about-container {
     font-size: 0.75rem;
