--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -6,6 +6,15 @@
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
+html {
+  overflow-y: scroll;
+}
+
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -18,6 +27,7 @@ body {
   background-color: #fff;
   line-height: 1.8rem;
   min-height: 100vh;
+  color: #000;
 }
 
 div#container {
@@ -220,6 +230,7 @@ section#intro > h1 {
   font-weight: 600;
   color: #eee;
   text-align: center;
+  margin: 0;
   padding: 100px 25px 40px 25px;
 }
 
@@ -479,6 +490,15 @@ div.api-entry > div.api-entry {
   margin-left: 20px;
   padding: 10px 20px;
   background-color: #e2e2e2;
+}
+
+div.api-entry > div.api-entry > div.api-entry {
+  border: 1px dotted #777;
+  margin-left: 0;
+}
+
+div.api-entry > div.api-entry > div.api-entry h5 {
+  font-size: 0.85rem;
 }
 
 h1.page-title {
