--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,12 +1,11 @@
-<div class="footer-margin left"></div>
 <footer>
-  <div class="footer-section">
-    <p>The Tuft framework, this website, and all content therein are copyright &copy; 2020 under the terms of the <a
-        href="https://github.com/tuftjs/tuft/blob/master/LICENSE" target="_blank">MIT License</a>.</p>
-  </div>
-  <div class="footer-section right">
-    <p id="github-footer">View the project respository on <a href="https://github.com/tuftjs/tuft" target="_blank">GitHub</a>.<br><br></p>
-    <p>Hosted by <a href="https://pages.github.com" target="_blank">GitHub Pages</a>.</p>
-  </div>
+  <p>
+    The Tuft framework, this website, and all content therein are copyright <span class="copyright">&copy; 2020</span> under the terms of the <a href="https://github.com/tuftjs/tuft/blob/master/LICENSE" target="_blank">MIT License</a>.
+  </p>
+  <p>
+    Hosted by <a href="https://pages.github.com" target="_blank">GitHub Pages</a>.
+  </p>
+  <p id="github-footer">View the project respository on
+    <a href="https://github.com/tuftjs/tuft" target="_blank">GitHub</a>.
+  </p>
 </footer>
-<div class="footer-margin right"></div>
