--- a/src/_sass/main.scss
+++ b/src/_sass/main.scss
@@ -1,5 +1,6 @@
-@import 'https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap';
-@import 'https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap');
 
 * {
   margin: 0;
@@ -25,7 +26,6 @@ html {
 
 body {
   background-color: #fff;
-  line-height: 1.8rem;
   min-height: 100vh;
   color: #000;
 }
@@ -65,12 +65,12 @@ a:hover {
 }
 
 header {
-  grid-column: 2 / 3;
+  grid-column: 1 / 4;
   align-self: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 10px 0;
+  padding: 0 2rem;
 }
 
 div.header-margin {
@@ -93,7 +93,7 @@ div#logo {
 div#logo > h2 {
   font-size: 2.5rem;
   color: #333;
-  margin: 10px;
+  margin: 0 10px;
   align-self: center;
 }
 
@@ -127,6 +127,7 @@ nav#nav-bar > ul {
 
 nav#nav-bar li {
   padding: 0 10px;
+  margin: 0 0.5rem;
 }
 
 nav#nav-bar li.current {
@@ -155,37 +156,39 @@ a.nav-bar-link.current {
 }
 
 footer {
-  grid-column: 2 / 3;
+  grid-column: 1 / 4;
   background-color: #eee;
-  font-size: 0.9rem;
-  padding: 30px 15px;
+  color: #555;
+  font-size: 0.85rem;
+  padding: 2rem;
+  text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-div.footer-section {
-  width: 40%;
+footer > p {
+  padding: 0.5rem 0.25rem;
 }
 
-div.footer-section.right {
-  text-align: end;
+footer a {
+  text-decoration: underline;
 }
 
-div.footer-margin {
-  background-color: #eee;
+footer .copyright {
+  white-space: nowrap;
 }
 
-div.footer-margin.left {
-  grid-column: 1 / 2;
-}
-
-div.footer-margin.right {
-  grid-column: 3 / 4;
-}
-
-p#github-footer {
+#github-footer {
   display: none;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  text-align: center;
 }
 
 main#index {
@@ -216,13 +219,14 @@ div.main-margin.right {
 section#intro {
   grid-column: 1 / 4;
   background-color: #333;
-  background-image: url(../images/bg.svg); /* background by SVGBackgrounds.com */
+  background-image: url('/assets/images/bg.svg'); /* background by SVGBackgrounds.com */
   background-attachment: scroll;
   background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
+  padding: 3rem 0;
 }
 
 section#intro > h1 {
@@ -231,7 +235,6 @@ section#intro > h1 {
   color: #eee;
   text-align: center;
   margin: 0;
-  padding: 100px 25px 40px 25px;
 }
 
 section#intro > p {
@@ -239,19 +242,19 @@ section#intro > p {
   font-weight: 300;
   color: #eee;
   text-align: center;
-  margin: auto;
   padding: 0 25px 25px 25px;
 }
 
 section#intro > div {
   display: flex;
   justify-content: center;
-  margin-bottom: 80px;
+  margin-bottom: 1rem;
 }
 
 section#intro > div > code {
   background-color: #2227;
-  font-size: 1rem;
+  font-family: 'Ubuntu Mono', monospace;
+  font-size: 1.25rem;
   color: #fff;
   padding: 4px 18px;
 }
@@ -353,7 +356,7 @@ section#get-started-btn > a {
   background-color: #369;
   text-decoration: none;
   border-radius: 4px;
-  padding: 20px 40px;
+  padding: 10px 40px;
 }
 
 section#get-started-btn > a:hover {
@@ -367,6 +370,7 @@ main#docs {
   display: flex;
   flex-direction: row;
   padding: 15px;
+  line-height: 1.6rem;
 }
 
 section#docs-nav {
@@ -374,12 +378,14 @@ section#docs-nav {
 }
 
 section#docs-nav h4 {
-  margin-top: 20px;
+  margin-top: 25px;
+  margin-bottom: 5px;
   color: #555;
 }
 
 section#docs-nav li {
   list-style: none;
+  padding-bottom: 0.2rem;
 }
 
 section#docs-nav-mobile {
@@ -492,13 +498,8 @@ div.api-entry > div.api-entry {
   background-color: #e2e2e2;
 }
 
-div.api-entry > div.api-entry > div.api-entry {
-  border: 1px dotted #777;
-  margin-left: 0;
-}
-
-div.api-entry > div.api-entry > div.api-entry h5 {
-  font-size: 0.85rem;
+div.api-entry > div.api-entry  h5 {
+  font-size: 0.9rem;
 }
 
 h1.page-title {
@@ -513,7 +514,7 @@ img#profile-photo {
   display: block;
   max-width: 200px;
   border-radius: 100%;
-  margin: 30px auto;
+  margin: 30px auto 40px auto;
 }
 
 main#extensions,
@@ -522,14 +523,14 @@ main#about {
   border-top: 2px solid #369;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  padding: 15px;
+  padding: 30px 15px;
 }
 
 div#extensions-container,
 div#benchmarks-container,
 div#about-container {
   background-color: #eee;
-  font-size: 0.9rem;
+  font-size: 1rem;
   border-radius: 10px;
   padding: 50px;
 }
@@ -572,6 +573,19 @@ div#benchmarks-container span {
   main#docs {
     grid-template-columns: 20% 75%;
   }
+
+  header {
+    padding: 0 0.5rem;
+  }
+
+  nav#nav-bar li {
+    margin: 0;
+  }
+
+  footer {
+    flex-direction: column;
+    justify-content: left;
+  }
 }
 
 @media only screen and (max-width: 830px) {
@@ -585,12 +599,8 @@ div#benchmarks-container span {
 }
 
 @media only screen and (max-width: 768px) {
-  html {
-    font-size: 18px;
-  }
-
   div#logo > h2 {
-    font-size: 1.25rem;
+    font-size: 1.75rem;
   }
 
   a.nav-bar-link {
@@ -606,10 +616,6 @@ div#benchmarks-container span {
   div#latest-release-link-container > a {
     font-weight: 600;
     font-size: 0.75rem;;
-  }
-
-  footer p {
-    line-height: 1.5rem;
   }
 
   section#docs-nav h4 {
@@ -630,16 +636,12 @@ div#benchmarks-container span {
     display: none;
   }
 
-  p#github-footer {
+  #github-footer {
     display: unset;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  body {
-    line-height: 1.5rem;
-  }
-
   header {
     flex-direction: column;
   }
@@ -651,7 +653,7 @@ div#benchmarks-container span {
 
   div#logo > h2 {
     font-size: 2.5rem;
-    margin: 15px 0;
+    margin-top: 1rem;
   }
 
   div#latest-release-link-container {
@@ -660,7 +662,7 @@ div#benchmarks-container span {
   }
 
   nav#nav-bar {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
   }
 
   nav#nav-bar > ul {
@@ -672,28 +674,12 @@ div#benchmarks-container span {
     font-size: 1.2rem;
   }
 
-  footer {
-    font-size: 0.75rem;
-    flex-direction: column;
-  }
-
-  div.footer-section {
-    width: 100%;
-    text-align: center;
-  }
-
-  div.footer-section.right {
-    margin-top: 25px;
-    text-align: center;
-  }
-
-
   section#intro > h1 {
     display: none;
   }
 
   section#intro > p {
-    margin-top: 75px;
+    padding-top: 1rem;
   }
 
   section#features {
@@ -746,11 +732,11 @@ div#benchmarks-container span {
 
 @media only screen and (max-width: 520px) {
   div#container {
-    font-size: 0.75rem;
+    font-size: 0.9rem;
   }
 
   a.nav-bar-link {
-    font-size: 0.85rem;
+    font-size: 0.95rem;
   }
 
   section#intro > h1 {
@@ -758,16 +744,11 @@ div#benchmarks-container span {
   }
 
   section#intro > p {
-    font-size: 1rem;
-    margin-top: 50px;
-  }
-
-  section#intro > div {
-    margin-bottom: 50px;
+    font-size: 1.25rem;
   }
 
   section#intro > div > code {
-    font-size: 0.7rem;
+    font-size: 1.1rem;
     padding: 0 8px;
   }
 
@@ -845,8 +826,7 @@ div#benchmarks-container span {
   }
 
   a.nav-bar-link {
-    font-size: 0.7rem;
-    margin: 4px;
+    font-size: 0.8rem;
     line-height: unset;
   }
 
@@ -857,8 +837,7 @@ div#benchmarks-container span {
   }
 
   footer {
-    font-size: 0.6rem;
-    flex-direction: column;
+    font-size: 0.8rem;
   }
 
   div#extensions-container > h2,
@@ -870,6 +849,12 @@ div#benchmarks-container span {
   div#extensions-container,
   div#benchmarks-container,
   div#about-container {
+    font-size: 0.75rem;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  a.nav-bar-link {
     font-size: 0.75rem;
   }
 }
